Add ability to choose DNS servers
The DNS servers used in VPN mode are now configurable. It's now
possible to ignore the system DNS server and use the specified
ones. Cloudflare DNS is now the default DNS server, which has a
no-logs policy.

Closes #275

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -436,4 +436,10 @@
     <string name="items_delete_confirm">Delete the selected items?</string>
     <string name="ip_address">IP address</string>
     <string name="rule_exists">Rule already defined</string>
+    <string name="dns_servers">DNS servers</string>
+    <string name="dns_servers_summary">Configure the DNS servers to use during the capture</string>
+    <string name="ipv4_dns_server">IPv4 DNS server</string>
+    <string name="ipv6_dns_server">IPv6 DNS server</string>
+    <string name="use_system_dns">Use system DNS</string>
+    <string name="use_system_dns_summary">Use the system DNS servers if possible</string>
 </resources>
