--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,8 @@
     <string name="ip_address_val">IP address: %1$s</string>
     <string name="host_val">Host: %1$s</string>
     <string name="protocol_val">Protocol: %1$s</string>
-    <string name="whitelist_action">Whitelist…</string>
+    <string name="malware_whitelist_action">Whitelist (malware)…</string>
+    <string name="decryption_whitelist_action">Whitelist (decryption)…</string>
     <string name="hide">Hide…</string>
     <string name="n_selected">%1$d selected</string>
     <string name="select_all">Select all</string>
@@ -226,7 +227,7 @@
     <string name="malware_detection_learn_more">Learn more about the malware detection feature</string>
     <string name="private_dns_message_notice">Private DNS prevents PCAPdroid from inspecting the DNS traffic. You can turn it off from the Android network settings</string>
     <string name="private_dns_hinders_detection">Private DNS hinders detection</string>
-    <string name="decryption_no_filter_warn">Select a target app when decrypting TLS to avoid losing your connection to the Internet</string>
+    <string name="decryption_no_filter_warn">Select a target app or use the decryption whitelist when decrypting TLS to avoid losing your connection to the Internet</string>
     <string name="block">Block…</string>
     <string name="unblock">Unblock…</string>
     <string name="firewall">Firewall</string>
@@ -299,6 +300,7 @@
     <string name="full_payload_summary">Show the full connections payload (e.g. the full HTTP request and response). This requires a lot of memory, don\'t use in the long run</string>
     <string name="not_decryptable">Not decryptable</string>
     <string name="decrypted">Decrypted</string>
+    <string name="whitelisted">Whitelisted</string>
     <string name="decryption">Decryption</string>
     <string name="decryption_filter">Decryption: %1$s</string>
     <string name="connection_start_not_seen">PCAPdroid has not seen the start of this connection. Some information may be missing</string>
@@ -421,8 +423,8 @@
     <string name="whitelist_mode">Whitelist mode</string>
     <string name="firewall_whitelist_notice">In this mode all the connections will be blocked, unless manually whitelisted. You may miss push notifications without a proper whitelist</string>
     <string name="firewall_whitelist_help">These rules specify which connections to allow. Blocklist rules have priority over whitelist rules</string>
-    <string name="add_to_whitelist">Add to whitelist</string>
-    <string name="remove_from_whitelist">Remove from whitelist</string>
+    <string name="add_to_fw_whitelist">Add to firewall whitelist</string>
+    <string name="remove_from_fw_whitelist">Remove from firewall whitelist</string>
     <string name="reset_stats_confirm">Do you really want to reset these stats?</string>
     <string name="port_mapping">Port mapping</string>
     <string name="port_mapping_summary">Configure port mapping rules to redirect connections to a different host or port</string>
@@ -442,4 +444,7 @@
     <string name="ipv6_dns_server">IPv6 DNS server</string>
     <string name="use_system_dns">Use system DNS</string>
     <string name="use_system_dns_summary">Use the system DNS servers if possible</string>
+    <string name="decryption_whitelist_rules">Decryption whitelist rules</string>
+    <string name="decryption_whitelist_help">List of rules to exclude specific connections from the TLS decryption. Useful to avoid breaking apps/SDKs employing certificate pinning. Host matching only works if a prior DNS reply is seen</string>
+    <string name="decryption_whitelist">Decryption whitelist</string>
 </resources>
