Update Turkish strings

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -177,7 +177,7 @@
     <string name="edit_list">Listeyi düzenle</string>
     <string name="status_uptodate">Güncel</string>
     <string name="private_dns_hinders_detection">Gizli DNS algılamayı engelliyor</string>
-    <string name="decryption_no_filter_warn">İnternet bağlantınızı kaybetmemek için TLS\'nin şifresini çözerken bir hedef uygulama seçin</string>
+    <string name="decryption_no_filter_warn">İnternet bağlantınızı kaybetmemek için TLS\'nin şifresini çözerken bir hedef uygulama seçin veya şifre çözme beyaz listesini kullanın</string>
     <string name="paid_features">Ücretli özellikler</string>
     <string name="interface_filter">Arayüz: %1$s</string>
     <string name="purchased">Satın alındı</string>
@@ -404,4 +404,46 @@
     <string name="firewall_purchase_msg">Bağlantıları engellemeye başlamak için <i>%1$s</i> özelliğini satın alın</string>
     <string name="mitm_wizard_description">TLS şifre çözme için aygıtı yapılandır</string>
     <string name="mitm_skip_notice">Ortadaki adam sertifikası kurulu görünmüyor. Devam ederseniz, şifre çözme başarısız olabilir</string>
+    <string name="app_log">Günlük kaydı</string>
+    <string name="no_data">Veri yok</string>
+    <string name="malware_whitelist_action">Beyaz liste (kötü amaçlı yazılım)…</string>
+    <string name="decryption_whitelist_action">Beyaz liste (şifre çözme)…</string>
+    <string name="mitm_addon">ortadaki adam eklentisi</string>
+    <string name="whitelisted">Beyaz listeye alındı</string>
+    <string name="mitmproxy_opts">Ek mitmproxy seçenekleri</string>
+    <string name="mitmproxy_opts_description">mitmproxy için ek seçenekler sağlayın</string>
+    <string name="mitm_addon_error">Ortadaki adam eklentisi başlatılırken hata oluştu. Ayrıntılar için günlüğe bakın</string>
+    <string name="whitelist_mode">Beyaz liste modu</string>
+    <string name="firewall_whitelist_notice">Bu modda, elle beyaz listeye alınmadığı sürece tüm bağlantılar engellenecektir. Uygun bir beyaz liste olmadan anlık bildirimleri kaçırabilirsiniz</string>
+    <string name="firewall_whitelist_help">Bu kurallar hangi bağlantılara izin verileceğini belirtir. Engelleme listesi kurallarının beyaz liste kurallarına göre önceliği vardır</string>
+    <string name="add_to_fw_whitelist">Güvenlik duvarı beyaz listesine ekle</string>
+    <string name="remove_from_fw_whitelist">Güvenlik duvarı beyaz listesinden kaldır</string>
+    <string name="reset_stats_confirm">Bu istatistikleri gerçekten sıfırlamak istiyor musunuz\?</string>
+    <string name="port_mapping">Bağlantı noktası eşleme</string>
+    <string name="original_port">Asıl bağlantı noktası</string>
+    <string name="required">gerekli</string>
+    <string name="destination_port">Hedef bağlantı noktası</string>
+    <string name="port_mapping_exists">Bağlantı noktası eşleme zaten tanımlandı</string>
+    <string name="items_delete_confirm">Seçili ögeler silinsin mi\?</string>
+    <string name="ip_address">IP adresi</string>
+    <string name="rule_exists">Kural zaten tanımlandı</string>
+    <string name="dns_servers">DNS sunucuları</string>
+    <string name="ipv4_dns_server">IPv4 DNS sunucusu</string>
+    <string name="ipv6_dns_server">IPv6 DNS sunucusu</string>
+    <string name="use_system_dns_summary">Mümkünse sistem DNS sunucularını kullanın</string>
+    <string name="decryption_whitelist_rules">Şifre çözme beyaz listesi kuralları</string>
+    <string name="decryption_whitelist">Şifre çözme beyaz listesi</string>
+    <string name="external_storage_perm_required">Harici depolama izni gerekli</string>
+    <string name="many_rules_warning">Çok sayıda kuralı içe aktarmaya çalışıyorsunuz, bu da bazı etkileşimler sırasında uygulamanın yanıt vermemesine neden olabilir. Gerçekten devam etmek istiyor musunuz\?</string>
+    <string name="pcapng_format">Pcapng biçimi</string>
+    <string name="destination_ip">Hedef IP adresi</string>
+    <string name="add_action">Ekle</string>
+    <string name="dns_servers_summary">Yakalama sırasında kullanılacak DNS sunucularını yapılandırın</string>
+    <string name="use_system_dns">Sistem DNS\'sini kullan</string>
+    <string name="port_mapping_summary">Bağlantıları farklı bir ana makineye veya bağlantı noktasına yönlendirmek için bağlantı noktası eşleme kurallarını yapılandırın</string>
+    <string name="redirect_to">Şuraya yönlendir:</string>
+    <string name="decryption_whitelist_help">Belirli bağlantıları TLS şifre çözme işleminden hariç tutmak için kurallar listesi. Sertifika sabitleme kullanan uygulamaları/SDK\'ları bozmaktan kaçınmak için faydalıdır. Ana makine eşleştirme yalnızca önceden bir DNS yanıtı görülürse çalışır</string>
+    <string name="pcapng_format_summary">Paketleri TLS şifre çözme parolalarının gömülmesine olanak tanıyan pcapng biçiminde dök</string>
+    <string name="sort_by">Sıralama ölçütü</string>
+    <string name="total_bytes">Toplam bayt</string>
 </resources>
