--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -212,7 +212,7 @@
     <string name="hidden_connections_help">Список правил для скрытия элементов из списка соединений, чтобы сфокусироваться только на нужном</string>
     <string name="enable_socks5_proxy_summary">Перенаправляет все TCP соединения на указанный SOCKS5 прокси</string>
     <string name="malware_whitelist_help">Определенный пользователем белый список для подавления обнаружения вредоносов. Удерживайте вредоносное соединение, чтобы создать правило согласно которому данное соединение не будет считаться вредоносным</string>
-    <string name="decryption_no_filter_warn">При расшифровке TLS выберите целевое приложение, чтобы избежать потери соединения с интернетом</string>
+    <string name="decryption_no_filter_warn">При расшифровке TLS выберите целевое приложение или используйте белый список дешифрования, чтобы избежать потери соединения с интернетом</string>
     <string name="traffic_dump">Дамп траффика</string>
     <string name="phone_app">Телефон</string>
     <string name="phone_app_info">Службы телефонии</string>
@@ -228,8 +228,8 @@
     <string name="grant_mitm_permission">Дать PCAPdroid разрешение контролировать mitm дополнение</string>
     <string name="configure_action">Настроить</string>
     <string name="cert_exported_now_installed">Сертификат экспортирован, теперь установите его из настроек Android</string>
-    <string name="cert_reinstall_required">Сертификат ЦС не установлен, запустите мастер настройки mitm</string>
-    <string name="mitm_addon_new_version">Mitm-дополнение для PCAPdroid требуется обновить</string>
+    <string name="cert_reinstall_required">Корневой сертификат не установлен, запустите мастер настройки mitm</string>
+    <string name="mitm_addon_new_version">PCAPdroid mitm дополнение требуется обновить</string>
     <string name="upgrade_action">Обновить</string>
     <string name="string_http_request">HTTP запрос</string>
     <string name="string_http_response">HTTP ответ</string>
@@ -245,9 +245,9 @@
     <string name="tx_direction">TX</string>
     <string name="rx_direction">RX</string>
     <string name="not_decryptable">Не дешифруемо</string>
-    <string name="full_payload">Полное содержимое</string>
-    <string name="network_traffic">Траффик</string>
-    <string name="warn_no_app_data">Приложение не обменивалось данными</string>
+    <string name="full_payload">Показывать полное содержимое</string>
+    <string name="network_traffic">Трафик</string>
+    <string name="warn_no_app_data">Обмена прикладными данными не было</string>
     <string name="display_as">Отобразить как…</string>
     <string name="geolocation">Геолокация</string>
     <string name="download_in_progress">Скачивание еще продолжается, пожалуйста подождите</string>
@@ -266,21 +266,21 @@
     <string name="rules_delete_confirm">Удалить выбранные правила\?</string>
     <string name="blocklist">Список для блокировки</string>
     <string name="keep_action">Оставить</string>
-    <string name="discard_action">Отказаться</string>
+    <string name="discard_action">Отмена</string>
     <string name="rules_merge_msg">Оставить существующие правила\?</string>
     <string name="last_firewall_block">Последняя блокировка</string>
     <string name="connections_blocked">Соединение заблокировано</string>
-    <string name="num_configured_rules">Настроенные правила</string>
+    <string name="num_configured_rules">Установленные правила</string>
     <string name="action_unblock">Разблокировать</string>
     <string name="action_block">Заблокировать</string>
     <string name="app_info">Информация о приложении</string>
-    <string name="export_ca_certificate">Экспортируйте сертификат ЦС PCAPdroid, откройте в Android настройки \"Шифрование и учетные данные\" и выберите установку в качестве \"Сертификат ЦС\"</string>
+    <string name="export_ca_certificate">Экспортируйте корневой сертификат PCAPdroid, откройте в Android настройки \"Шифрование и учетные данные\" и выберите установку в качестве \"Сертификат ЦС\"</string>
     <string name="socks5_info">SOCKS5 прокси: %1$s:%2$d</string>
     <string name="mitm_start_failed">Не удалось запустить mitm сервис. Переустановите mitm дополнение и повторите попытку</string>
-    <string name="install_ca_certificate">Установите сертификат PCAPdroid ЦС, выбрав \"VPN и приложения\". Android запросит ваш код или пароль блокировки экрана</string>
+    <string name="install_ca_certificate">Установите корневой сертификат PCAPdroid, выбрав \"VPN и приложения\". Android запросит ваш код или пароль блокировки экрана</string>
     <string name="checking_the_certificate">Проверяем сертификат…</string>
-    <string name="cert_installed_correctly">Сертификат ЦС установлен</string>
-    <string name="mitm_addon_bad_version">Неподходящая версия mitm дополнения для PCAPdroid. Удалите и попробуйте снова</string>
+    <string name="cert_installed_correctly">Корневой сертификат установлен</string>
+    <string name="mitm_addon_bad_version">Неподходящая версия PCAPdroid mitm дополнения. Удалите и попробуйте снова</string>
     <string name="conn_status_active">Активно</string>
     <string name="export_failed">Экспорт не удался</string>
     <string name="not_encrypted">Не зашифровано</string>
@@ -308,7 +308,7 @@
     <string name="app_intro_privacy_msg">Это приложение не содержит трекеры и аналитику, не собирает данные без вашего согласия.
 \n
 \nКак в этом убедиться\? Ознакомьтесь с <a href="%1$s">политикой конфиденциальности</a> и <a href="%2$s">исходным кодом</a></string>
-    <string name="ca_cert_export_failed">При экспорте сертификата ЦС возникла ошибка
+    <string name="ca_cert_export_failed">При экспорте корневого сертификата возникла ошибка
 \n
 \nЕсли на вашем устройстве есть Autostart или похожие программы, ограничивающие активность фоновых процессов, убедитесь в том, что <a href="%1$s">разрешили все для PCAPdroid</a></string>
     <string name="netd_block_missed">Это соединение инициировано сервисом netd, поэтому оно не может быть заблокировано</string>
@@ -316,7 +316,7 @@
     <string name="block_quick_summary">Блокировка QUIC соединений возможно вернет к TLS, который можно дешифровать. Некоторые приложения могут перестать работать</string>
     <string name="app_intro_back_button">Назад</string>
     <string name="app_intro_done_button">Готово</string>
-    <string name="mitm_setup_wizard_intro">Этот мастер настройки проведет вас через установку mitm дополнения для PCAPdroid и центра сертификации, которые необходимы для проведения <a href="%1$s">дешифрования TLS</a></string>
+    <string name="mitm_setup_wizard_intro">Этот мастер настройки проведет вас через установку дополнения PCAPdroid mitm и корневого сертификата, которые необходимы для проведения <a href="%1$s">дешифрования TLS</a></string>
     <string name="app_intro_next_button">Далее</string>
     <string name="app_intro_skip_button">Пропустить</string>
     <string name="block_private_dns_summary">Обнаруживать и по возможности блокировать использование приватных DNS, чтобы инспектировать DNS траффик. Отключение этой опции может затруднить анализ траффика</string>
@@ -359,8 +359,8 @@
     <string name="show_only_cleartext">Соединения c открытым текстом</string>
     <string name="ip_both">IPv4 и IPv6</string>
     <string name="memory_usage">Использование памяти</string>
-    <string name="cleartext_connection">Открытый текст</string>
-    <string name="vpn_exemptions_summary">Исключение некоторых приложений из VPN соединения. Их траффик не будет отслеживаться</string>
+    <string name="cleartext_connection">Незашифрованно</string>
+    <string name="vpn_exemptions_summary">Исключение некоторых приложений из VPN соединения. Их траффик не будет просматриваться</string>
     <string name="vpn_exemptions">VPN Исключения</string>
     <string name="notifications_notice">Приложение использует уведомления для оповещения в случае аномальных событий. Предоставьте ему разрешение на отправку уведомлений на следующем экране</string>
     <string name="cancel_action">Отмена</string>
@@ -393,14 +393,56 @@
 \n - функция может не работать на Android 12 и выше
 \n - если VPN приложение запущено, вы должны, либо указать целевое приложение для дешифрования, либо исключить PCAPdroid mitm-дополнение из VPN, иначе трафик будет закольцован</string>
     <string name="paid_feature">Платная функция</string>
-    <string name="unlock_token_summary">Токен может быть использован для разблокировки платных функций в версиях приложения, полученных из сторонних источников (F-Droid/Github)</string>
-    <string name="access_paid_features_msg">Ознакомьтесь <a href="%1$s">с руководством</a>, чтобы узнать как получить доступ к платным функциям</string>
-    <string name="requesting_unlock_token">Запрашивается unlock token, пожалуйста подождите</string>
+    <string name="unlock_token_summary">Токен, который может использоваться для разблокировки платных возможностей в версиях приложения не из Google Play (Github/F-Droid)</string>
+    <string name="access_paid_features_msg">Ознакомьтесь <a href="%1$s">с инструкцией</a>, чтобы узнать, как получить доступ к платным функциям</string>
+    <string name="requesting_unlock_token">Запрашиваю unlock token, пожалуйста подождите</string>
     <string name="show_action">Показать</string>
     <string name="mitm_wizard_description">Настройте устройство для дешифрования TLS</string>
     <string name="mitm_skip_notice">Похоже, что mitm сертификат не установлен. Если Вы продолжите, дешифрование может завершиться неудачей</string>
     <string name="firewall_purchase_msg">Приобретите функцию <i>%1$s</i>, чтобы начать блокировать соединения</string>
-    <string name="unlock_token_error">Не удалось запросить unlock token [%1$d]: %2$s</string>
+    <string name="unlock_token_error">Ошибка запроса unlock token [%1$d]: %2$s</string>
     <string name="unlock_token_msg1">Это ваш unlock token. Не потеряйте его, так как он используется для <a href="%1$s">генерации ваших лицензионных ключей</a></string>
-    <string name="license_service_unavailable">Сервис лицензирования PCAPdroid в данный момент недоступен. Пожалуйста, попробуйте вновь через несколько минут</string>
+    <string name="license_service_unavailable">Сервис лицензирования PCAPdroid временно недоступен. Пожалуйста, повторите попытку позже</string>
+    <string name="app_log">Журнал</string>
+    <string name="no_data">Нет данных</string>
+    <string name="malware_whitelist_action">Белый список (вредонос)…</string>
+    <string name="decryption_whitelist_action">Белый список (дешифрование)…</string>
+    <string name="mitm_addon">mitm дополнение</string>
+    <string name="whitelisted">Добавлено в белый список</string>
+    <string name="mitmproxy_opts_description">Укажите дополнительные опции для mitmproxy</string>
+    <string name="mitm_addon_error">Ошибка запуска mitm дополнения. Проверьте журнал для деталей</string>
+    <string name="whitelist_mode">Режим белого списка</string>
+    <string name="firewall_whitelist_notice">В этом режиме все соединения будут заблокированы, до ручного добавления в белый список. Вы можете лишиться push-уведомлений без корректного белого списка</string>
+    <string name="add_to_fw_whitelist">Добавить в белый список файрвола</string>
+    <string name="firewall_whitelist_help">Эти правила определяют какие соединения разрешить. Правила блокировки имеют приоритет над белым списком</string>
+    <string name="reset_stats_confirm">Вы действительно хотите сбросить статистику\?</string>
+    <string name="remove_from_fw_whitelist">Убрать из белого списка файрвола</string>
+    <string name="port_mapping">Сопоставление портов</string>
+    <string name="redirect_to">Перенаправлять на:</string>
+    <string name="add_action">Добавить</string>
+    <string name="items_delete_confirm">Удалить выбранные элементы\?</string>
+    <string name="destination_ip">IP адрес назначения</string>
+    <string name="destination_port">Порт назначения</string>
+    <string name="port_mapping_summary">Настройте правила сопоставления портов для перенаправления соединений на другие хосты или порты</string>
+    <string name="original_port">Изначальный порт</string>
+    <string name="required">необходимо</string>
+    <string name="port_mapping_exists">Сопоставление портов уже определено</string>
+    <string name="dns_servers_summary">Настройте DNS сервера для использования в процессе захвата</string>
+    <string name="ipv4_dns_server">IPv4 DNS сервер</string>
+    <string name="ipv6_dns_server">IPv6 DNS сервер</string>
+    <string name="dns_servers">DNS сервера</string>
+    <string name="ip_address">IP адрес</string>
+    <string name="rule_exists">Правило уже определено</string>
+    <string name="use_system_dns">Использовать системный DNS</string>
+    <string name="pcapng_format">Формат Pcapng</string>
+    <string name="decryption_whitelist">Белый список дешифрования</string>
+    <string name="external_storage_perm_required">Требуется разрешение на доступ к внешнему накопителю</string>
+    <string name="mitmproxy_opts">Дополнительные опции mitmproxy</string>
+    <string name="pcapng_format_summary">Делать дамп пакетов в формат pcapng, который позволяет встраивать секреты дешифрования TLS</string>
+    <string name="many_rules_warning">Вы пытаетесь импортировать множество правил, что может сделать приложение неотзывчивым в течение некоторых действий. Вы действительно хотите продолжить\?</string>
+    <string name="decryption_whitelist_help">Список правил для исключения отдельных соединений из процесса дешифрования TLS. Полезно, чтобы избегать случаи, когда из-за привязки сертификата нарушается работа приложения или SDK. Сопоставление хостов работает только если раннее был получен соответствующий DNS ответ</string>
+    <string name="decryption_whitelist_rules">Белый список дешифрования</string>
+    <string name="use_system_dns_summary">Использовать системные DNS сервера, если это возможно</string>
+    <string name="total_bytes">Всего байт</string>
+    <string name="sort_by">Сортировать по</string>
 </resources>
