Add pcapng docs URL

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -449,8 +449,8 @@
     <string name="decryption_whitelist">Decryption whitelist</string>
     <string name="external_storage_perm_required">The external storage permission is required</string>
     <string name="many_rules_warning">You are trying to import many rules, which could make the app unresponsive during some interactions. Do you really want to continue?</string>
-    <string name="pcapng_format">PCAPNG format</string>
-    <string name="pcapng_format_summary">Dump packets in the PCAPNG dump format, which allows embedding TLS decryption secrets</string>
+    <string name="pcapng_format">Pcapng format</string>
+    <string name="pcapng_format_summary">Dump packets in the pcapng dump format, which allows embedding TLS decryption secrets</string>
     <string name="sort_by">Sort by</string>
     <string name="total_bytes">Total bytes</string>
 </resources>
