--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -212,7 +212,7 @@
     <string name="start_at_boot_summary">Avvia la cattura in automatico all\'avvio del dispositivo</string>
     <string name="malware_whitelist_help">Whitelist definita dall\'utente per inibire il rilevamento di malware. Tieni premuto su una connessione malevola per creare una regola</string>
     <string name="enable_socks5_proxy_summary">Redirigi tutte le connessioni TCP verso il proxy SOCKS5</string>
-    <string name="decryption_no_filter_warn">Quando la decrittazione TLS è abilitata, è necessario selezionare un filtro app per evitare di perdere la connessione a Internet</string>
+    <string name="decryption_no_filter_warn">Quando la decrittazione TLS è abilitata, è necessario selezionare un filtro app o usare la whitelist di decrittazione per evitare di perdere la connessione a Internet</string>
     <string name="traffic_dump">Salvataggio del traffico</string>
     <string name="conn_status_active">Attiva</string>
     <string name="phone_app">Telefono</string>
@@ -403,4 +403,46 @@
     <string name="unlock_token_msg1">Questo è il tuo unlock token. Prendine nota in quanto ti servità <a href="%1$s">per generare i codici di licenza</a></string>
     <string name="mitm_skip_notice">Il certificato di mitm non sembra essere installato. Se procedi, la decrittazione potrebbe fallire</string>
     <string name="mitm_wizard_description">Configura il dispositivo per la decrittazione TLS</string>
+    <string name="app_log">Log</string>
+    <string name="no_data">Dati non disponibili</string>
+    <string name="malware_whitelist_action">Aggiungi a whitelist (malware)…</string>
+    <string name="decryption_whitelist_action">Aggiungi a whitelist (decrittazione)…</string>
+    <string name="mitm_addon">addon di mitm</string>
+    <string name="whitelisted">Whitelistato</string>
+    <string name="mitmproxy_opts">Opzioni aggiuntive mitmproxy</string>
+    <string name="mitmproxy_opts_description">Fornisci opzioni aggiuntive per mitmproxy</string>
+    <string name="mitm_addon_error">Errore durante l\'avvio dell\'addon di mitm. Per maggiori dettagli controllare il log</string>
+    <string name="whitelist_mode">Modalità whitelist</string>
+    <string name="firewall_whitelist_notice">In questa modalità tutte le connessioni sono bloccate, a parte quelle manualmente whitelistate. Se non crei una whitelist appropriata, potresti inibire le notifiche push del sistema</string>
+    <string name="firewall_whitelist_help">Queste regole specificano quali conessioni sono consentite. Le regole della lista di blocco hanno preferenza sulle regole della whitelist</string>
+    <string name="add_to_fw_whitelist">Aggiungi alla whitelist del firewall</string>
+    <string name="remove_from_fw_whitelist">Rimuovi dalla whitelist del firewall</string>
+    <string name="reset_stats_confirm">Vuoi veramente resettare queste statistiche\?</string>
+    <string name="port_mapping">Port mapping</string>
+    <string name="port_mapping_summary">Configura del regole di port mapping per redirigere le connessioni a host o porte differenti</string>
+    <string name="add_action">Aggiungi</string>
+    <string name="redirect_to">Redireziona a:</string>
+    <string name="original_port">Porta originale</string>
+    <string name="required">richiesto</string>
+    <string name="destination_ip">Indirizzo IP di destinazione</string>
+    <string name="destination_port">Porta di destinazione</string>
+    <string name="port_mapping_exists">Regola di port mapping già definita</string>
+    <string name="items_delete_confirm">Eliminare gli elementi selezionati\?</string>
+    <string name="ip_address">Indirizzo IP</string>
+    <string name="rule_exists">Regola già definita</string>
+    <string name="dns_servers">Server DNS</string>
+    <string name="dns_servers_summary">Configura i server DNS da usare durante la cattura</string>
+    <string name="ipv4_dns_server">Server DNS per IPv4</string>
+    <string name="ipv6_dns_server">Server DNS per IPv6</string>
+    <string name="use_system_dns">Usa il DNS di sistema</string>
+    <string name="use_system_dns_summary">Se possibile utilizza i server DNS di sistema</string>
+    <string name="decryption_whitelist_rules">Regole whitelist per decrittazione</string>
+    <string name="decryption_whitelist">Whitelist della decrittazione</string>
+    <string name="external_storage_perm_required">Il permesso di accesso ai file esterni è richiesto</string>
+    <string name="many_rules_warning">Si sta cercando d\'importare molte regole, che potrebbero causare il rallentamento dell\'app durante alcune interazioni con la stessa. Procedere\?</string>
+    <string name="pcapng_format">Formato pcapng</string>
+    <string name="pcapng_format_summary">Salva i pacchetti di rete nel formato pcapng, che permette di integrare al suo interno i segreti della decrittazione TLS</string>
+    <string name="sort_by">Ordina per</string>
+    <string name="total_bytes">Bytes totali</string>
+    <string name="decryption_whitelist_help">Lista di regole per escludere specifiche connessioni dalla decrittazione TLS. E\' utile per evitare che app/SDK con certificate pinning smettano di funzionare. Il matching basato sull\'host funziona solo quando è presente una risposta DNS precedente alla connessione TLS</string>
 </resources>
