--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,9 @@
     <string name="theme_dark">Dark</string>
     <string name="app_theme">Theme</string>
     <string name="socks5_proxy">SOCKS5</string>
-    <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to the specified SOCKS5 proxy</string>
+    <string name="socks5_redirection">SOCKS5 redirection</string>
+    <string name="socks5_summary">Configure the redirection to a SOCKS5 proxy</string>
+    <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to a SOCKS5 proxy</string>
     <string name="socks5_info">SOCKS5 proxy: %1$s:%2$d</string>
     <string name="proxy_ip_address">Proxy IP address</string>
     <string name="proxy_port">Proxy port</string>
